tests/reference/asr-iostat_non_scalar_value-7d45a6f.stderr
semantic error: `iostat` must be of type, Integer
 --> tests/errors/iostat_non_scalar_value.f90:7:5
  |
7 |     read(buffer, *, iostat=ios(1:1))
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 
